Updated premake config file. Added bin folders to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,12 @@ imgui.ini
 examples/*/Debug/*
 examples/*/Release/*
 examples/*/x64/*
+bin/*
+bin-int/*
 
 ## Visual Studio artifacts
 .vs
+*.vcxproj
 ipch
 *.opensdf
 *.log
